docs & refactor: add user swagger docs
