# app/internal/delivery/http/v1/user.go
@@ -2,7 +2,6 @@ package v1
 
 import (
 	"net/http"
-	"ordering-system-backend/internal/domain"
 	"ordering-system-backend/internal/service"
 	"strconv"
 
@@ -15,7 +14,7 @@ func (h *Handler) initUserRoutes(api *gin.RouterGroup) {
 	{
 		// Auth
 		user.POST("", h.createUser)                   // 創建User
-		user.GET("/login", h.getUserByEmail)          // 透過Email確認user有沒有存在
+		user.GET("/login", h.login)                   // 透過Email確認user有沒有存在
 		user.POST("/reset-password", h.resetPassword) // 重設密碼
 
 		// Others
@@ -34,11 +33,24 @@ type createUserInput struct {
 	LanguageId int    `json:"languageId" binding:"required"`
 }
 
+type updateUserInput struct {
+	FirstName  string `json:"firstName" binding:"required"`
+	LastName   string `json:"lastName" binding:"required"`
+	LanguageId int    `json:"languageId" binding:"required"`
+}
+
 type resetPasswordInput struct {
 	UserId   string `json:"userId" binding:"required"`
 	Password string `json:"password" binding:"required"`
 }
 
+// @Tags Users
+// @Description Create User
+// @Accept json
+// @Param data body createUserInput true "userType: 用來區分用戶類別，StoreEase商家為0, OrderEase客戶為1<br><br>languageId: 區分多語系，en為1, zh為2<br><br>"
+// @Produce json
+// @Success 200 {string} string userId
+// @Router /users [post]
 func (h *Handler) createUser(c *gin.Context) {
 	var inp createUserInput
 	if err := c.BindJSON(&inp); err != nil {
@@ -63,8 +75,15 @@ func (h *Handler) createUser(c *gin.Context) {
 	c.IndentedJSON(http.StatusOK, userId)
 }
 
+// @Tags Users
+// @Description Update User
+// @Accept json
+// @Param data body updateUserInput true "languageId: 區分多語系，en為1, zh為2<br><br>"
+// @Produce json
+// @Success 200 {string} string userId
+// @Router /users [patch]
 func (h *Handler) updateUser(c *gin.Context) {
-	var inp domain.User
+	var inp updateUserInput
 	userId := c.Param("user_id")
 
 	if err := c.BindJSON(&inp); err != nil {
@@ -84,6 +103,12 @@ func (h *Handler) updateUser(c *gin.Context) {
 	c.IndentedJSON(http.StatusOK, true)
 }
 
+// @Tags Users
+// @Description Delete User
+// @Param user_id path string true "User Id"
+// @Produce json
+// @Success 200 {string} string userId
+// @Router /users/{userId} [delete]
 func (h *Handler) deleteUser(c *gin.Context) {
 	userId := c.Param("user_id")
 	if err := h.services.Users.Delete(c.Request.Context(), userId); err != nil {
@@ -94,7 +119,16 @@ func (h *Handler) deleteUser(c *gin.Context) {
 	c.IndentedJSON(http.StatusOK, true)
 }
 
-func (h *Handler) getUserByEmail(c *gin.Context) {
+// @Tags Users
+// @Description 以Firebase uid或Email獲取UserId，可在使用者登入前就使用來區分頁面要跳轉到登入或註冊
+// @Param userType query int true "用來區分用戶類別，StoreEase商家為0, OrderEase客戶為1"
+// @Param method query string true "可選擇以 uid 或 email 進行query"
+// @Param uid query string false "method為uid時不可為空"
+// @Param email query string false "method為email時不可為空"
+// @Produce json
+// @Success 200 {string} string userId
+// @Router /users/login [get]
+func (h *Handler) login(c *gin.Context) {
 	userTypeStr := c.Query("userType")
 	method := c.Query("method") // email or uid
 	userId := ""
@@ -140,6 +174,12 @@ func (h *Handler) getUserByEmail(c *gin.Context) {
 	c.IndentedJSON(http.StatusOK, userId)
 }
 
+// @Tags Users
+// @Description Get user's data by id
+// @Param user_id path string true "User Id"
+// @Produce json
+// @Success 200 {object} domain.User
+// @Router /users/{userId} [get]
 func (h *Handler) getUserById(c *gin.Context) {
 	userId := c.Param("user_id")
 	user, err := h.services.Users.GetById(c.Request.Context(), userId)
@@ -151,6 +191,13 @@ func (h *Handler) getUserById(c *gin.Context) {
 	c.IndentedJSON(http.StatusOK, user)
 }
 
+// @Tags Users
+// @Description Reset user's password
+// @Accept json
+// @Param data body resetPasswordInput true "JSON data"
+// @Produce json
+// @Success 200 {string} string userId
+// @Router /users/reset-password [post]
 func (h *Handler) resetPassword(c *gin.Context) {
 	var inp resetPasswordInput
 	if err := c.BindJSON(&inp); err != nil {
